update FAQ vps hosting and add-on price update

--- a/vps.html
+++ b/vps.html
@@ -173,7 +173,7 @@ $(document).ready(function () {
               </div>
               <div class="txtrt">
                 <div class="arrow"></div>
-                <div class="ratetxt">$<span>15</span></div>
+                <div class="ratetxt">RM<span>60</span></div>
                 <span>cPanel / WHM</span><br />
                 Our recommended panel! 
                 <!--txtrt--> 
@@ -188,7 +188,7 @@ $(document).ready(function () {
               </div>
               <div class="txtrt">
                 <div class="arrow"></div>
-                <div class="ratetxt">$<span>15</span></div>
+                <div class="ratetxt">RM<span>60</span></div>
                 <span>Plesk</span><br />
                 For enhanced control! 
                 <!--txtrt--> 
@@ -205,7 +205,7 @@ $(document).ready(function () {
               </div>
               <div class="txtrt">
                 <div class="arrow"></div>
-                <div class="ratetxt">$<span>15</span></div>
+                <div class="ratetxt">RM<span>40</span></div>
                 <span>CloudLinux</span><br />
                 Empower your Experience! 
                 <!--txtrt--> 
@@ -220,7 +220,7 @@ $(document).ready(function () {
               </div>
               <div class="txtrt">
                 <div class="arrow"></div>
-                <div class="ratetxt">$<span>15</span></div>
+                <div class="ratetxt">RM<span>50</span></div>
                 <span>WHMCS</span><br />
                 The #1 Billing Solution 
                 <!--txtrt--> 
@@ -237,7 +237,7 @@ $(document).ready(function () {
               </div>
               <div class="txtrt">
                 <div class="arrow"></div>
-                <div class="ratetxt">$<span>15</span></div>
+                <div class="ratetxt">RM<span>50</span></div>
                 <span>ClientExec</span><br />
                 Client Management System 
                 <!--txtrt--> 
@@ -252,7 +252,7 @@ $(document).ready(function () {
               </div>
               <div class="txtrt">
                 <div class="arrow"></div>
-                <div class="ratetxt">$<span>15</span></div>
+                <div class="ratetxt">RM<span>50</span></div>
                 <span>R1Soft CDP 3.0 Node</span><br />
                 Continuous Data Protection 
                 <!--txtrt--> 
@@ -267,36 +267,51 @@ $(document).ready(function () {
     </div>
     <div class="TabbedPanelsContent">
       <div class="accordianbox" id="accordion1">
-        <h4>What is a Dedicated Server?</h4>
+        <h4>What is a VPS Hosting?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>VPS is a Virtual Private Server created on a Node using a virtualization technology. Each VPS on the node gets guaranteed RAM, CPU power, Disk Space, Bandwidth and a unique file system.</p>
           <!--txtinner--> 
         </div>
-        <h4>What are the benefits of Dedicated Server?</h4>
+        <h4>Why should I choose VPS hosting instead of Shared Hosting or Dedicated Server?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>VPS hosting is a solution that includes features of both Shared hosting and Dedicated Server. You will get Dedicated server features but It costs only a fraction of Dedicated Server. With VPS hosting, you get Dedicated CPU resources like RAM and processor which will enhance the performance of your website. You also get complete root access allowing server customization and you can install software or applications just like you would operate a Dedicated Server.</p>
           <!--txtinner--> 
         </div>
-        <h4>Do you provide fully managed Dedicated Servers?</h4>
+        <h4>Who should choose VPS hosting?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>VPS Hosting plans are designed for the individuals and companies that would like to host their websites or software/application in an isolated hosting environment for performance and security purposes and to get higher server resources at low cost.</p>
           <!--txtinner--> 
         </div>
-        <h4>Do you take backup of Dedicated Server?</h4>
+        <h4>Do you provide fully managed VPS hosting?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>Yes, our VPS hosting plans are fully managed. We manage all daily system administration and perform server monitoring round the clock.</p>
           <!--txtinner--> 
         </div>
-        <h4>What is the network uptime you provide on Dedicated Server?</h4>
+        <h4>Do you take backup of VPS node?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>Yes, we do take daily off-line backups of complete server. However, WebHostingUK strongly advises the client to regularly perform a backup of their VPS.</p>
+          <!--txtinner--> 
+        </div>
+        <h4>Can I upgrade my VPS Hosting to a Dedicated Server in future?</h4>
+        <div class="txtinner">
+          <p>Yes, you can upgrade your VPS hosting to a Dedicated Server at any point of time. We will setup your Dedicated Server and transfer all data from VPS hosting to Dedicated Server without any downtime and outage.</p>
           <!--txtinner--> 
         </div>
         <h4>What is the process of data migration from previous host?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>Kindly fill in the data migration form available on the following link: <a href="migration.html">Migration</a></p>
           <!--txtinner--> 
         </div>
+        <h4>What is the network uptime you provide on VPS hosting?</h4>
+        <div class="txtinner">
+          <p>We provide 99.9% network uptime guarantee SLA.</p>
+          <!--txtinner-->                                     
+        </div>
+        <h4>What methods of payment do you accept?</h4>
+        <div class="txtinner">
+          <p>We accept all major credit cards which can be paid via Paypal option while trying to signup and Bank transfers.</p>
+          <!--txtinner-->                                     
+        </div>                                               
         <!--accordianbox--> 
       </div>
       <!--TabbedPanelsContent--> 
