update feature box for vps hosting

--- a/vps.html
+++ b/vps.html
@@ -730,15 +730,15 @@ $(document).ready(function () {
     <h4>Fully Managed VPS Servers with <span class="red"><strong>99.9%</strong></span> network <span class="red"><strong>hosting service</strong></span> SLA</h4>
     <ul class="list2">
       <li>
-        <div class="inner_content icon1"><span class="text1">SOLUS VM Technology</span>Web hosting UK VPS servers are empowered by SOLUS VM Technology...<br />
+        <div class="inner_content icon1"><span class="text1">SOLUS VM Technology</span>GB Network VPS Nodes are empowered by SolusVM Technology...<br />
           <a href="#">Learn More</a></div>
       </li>
       <li>
-        <div class="inner_content icon2"><span class="text1">Root Access</span>Web hosting UK VPS offers you  upreme level of control...<br />
+        <div class="inner_content icon2"><span class="text1">Root Access</span>GB Network VPS offers you  upreme level of control...<br />
           <a href="#">Learn More</a></div>
       </li>
       <li>
-        <div class="inner_content icon3"><span class="text1">Intuitive Control Panel</span>All Web hosting UK VPS servers are powered by predominant control panels in the hosting industry...<br />
+        <div class="inner_content icon3"><span class="text1">Intuitive Control Panel</span>All GB Network VPS Nodes are powered by predominant control panels in the hosting industry...<br />
           <a href="#">Learn More</a></div>
       </li>
     </ul>
@@ -748,11 +748,11 @@ $(document).ready(function () {
           <a href="#">Learn More</a></div>
       </li>
       <li>
-        <div class="inner_content icon5"><span class="text1">Free Daily Backups</span>Your important data is secure with us from data Loss or corruption! Webhosting UK offers free VPS...<br />
+        <div class="inner_content icon5"><span class="text1">Free Daily Backups</span>Your important data is secure with us from data Loss or corruption! GB Network offers free VPS...<br />
           <a href="#">Learn More</a></div>
       </li>
       <li>
-        <div class="inner_content icon6"><span class="text1">24x7x365 Customer Support</span>Web hosting UK staff is at your service round the clock 365 days to provide you unmatched level...<br />
+        <div class="inner_content icon6"><span class="text1">24x7x365 Customer Support</span>GB Network staff is at your service round the clock 365 days to provide you unmatched level...<br />
           <a href="#">Learn More</a></div>
       </li>
     </ul>
@@ -762,18 +762,16 @@ $(document).ready(function () {
   <div class="box2">
     <h4>Virtual Private Server Advantages</h4>
     <ul class="list1">
-      <li class="icon1"><span class="text1">Dedicated Server Core Features</span> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. Vestibulum vehicula purus nec dui accumsan fermentum. <span class="red">Suspendisse potenti.</span></li>
-      <li class="icon2"><span class="text1">Data Center Infrastructure</span> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. Vestibulum vehicula purus nec dui accumsan fermentum. <span class="red">Suspendisse potenti.</span></li>
+      <li class="icon1"><span class="text1">Scalable on demand, with no downtime</span>Need more resources for your Managed VPS on the fly? With our scalable system, your demands are fulfilled without any downtime - no migration of files or databases are required and there are no changes in your settings.</li>
+      <li class="icon2"><span class="text1">Isolated resources for faster performance</span> Our VPS nodes are divided into isolated containers that each have their own set of memory, diskspace and CPU power. This gives you optimal performance at an affordable price.</li>
     </ul>
     <ul class="list1">
-      <li class="icon3"><span class="text1">Server Monitoring</span> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. Ut dapibus est id odio pretium blandit in eget leo.</li>
-      <li class="icon4"><span class="text1">Offline Backup</span> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. Ut dapibus est id odio pretium blandit in eget leo. </li>
+      <li class="icon3"><span class="text1">Choose your own control panel</span>We offer 3 different control panels for your Managed VPS – cPanel/WHM, Plesk or DirectAdmin – but if you’re happy just using the command line, you can order your VPS with no control panel and install whatever you prefer!</li>
+      <li class="icon4"><span class="text1">Custom Built, Enterprise-grade hardware</span> We don't do the cheap ride here. We custom build all our Managed VPS servers and use only the best components available, to ensure maximum performance and stability.</li>
     </ul>
     <ul class="list1">
-      <li class="icon5"><span class="text1">Experienced System Admins</span> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. Vestibulum vehicula purus nec dui accumsan fermentum.  
-        Ut dapibus est id odio pretium blandit in eget leo. </li>
-      <li class="icon6"><span class="text1">99.9% uptime guarantee SLA</span> Vestibulum sit amet neque eu neque suscipit consequat quis vel risus. Vestibulum vehicula purus nec dui accumsan fermentum.  
-        Ut dapibus est id odio pretium blandit in eget leo. </li>
+      <li class="icon5"><span class="text1">Rapid, quality technical support around the clock</span> Need any technical assistance? Any time of the day or night, we’ll be there for you. Support is something KnownHost prides itself on so you can rest easy knowing we've got your back. </li>
+      <li class="icon6"><span class="text1">99.9% Uptime Guarantee</span> Our 24/7/365 support staff with expert system admins keep your server running at its peak. We use industry best practices, the best data centers and ensure your server has the latest security patches. That's why we guarantee that your site will be up over 99.9% of the time.</li>
     </ul>
     <!--box2--> 
   </div>
