Add link to bulk domain search and bulk domain transfer

--- a/domain_ssl.html
+++ b/domain_ssl.html
@@ -141,9 +141,9 @@ $(document).ready(function () {
         </div>
         <div class="text1">
           <ul>
-            <li><a href="#">Bulk Domain Search</a></li>
-            <li><a href="#">Bulk Domain Transfer</a></li>
-            <li><a href="#">See More Prices</a></li>
+            <li><a href="https://secure.gempakbox.net/domainchecker.php?search=bulkregister" target="_blank">Bulk Domain Search</a></li>
+            <li><a href="https://secure.gempakbox.net/domainchecker.php?search=bulktransfer" target="_blank">Bulk Domain Transfer</a></li>
+            <!-- <li><a href="#">See More Prices</a></li> -->
           </ul>
           <!--text1--> 
         </div>
