modification on SSL table list

--- a/domain_ssl.html
+++ b/domain_ssl.html
@@ -290,15 +290,13 @@ $(document).ready(function () {
     </div>
     <div class="TabbedPanelsContent">
       <div class="ssl_box">
-        <p>Inexpensive <span>GeoTrust SSL Certificates</span> to ensure secure online transactions and
+        <p>Inexpensive <span>Comodo SSL Certificates</span> to ensure secure online transactions and
           conduct business over the internet through a shielded protocol.</p>
         <div class="ssl_lt">
           <ul>
             <li class="bg1">Prices</li>
             <li>Submit Your Order Now</li>
             <li class="bg1">Validation Type</li>
-            <li>Trust Level</li>
-            <li class="bg1">Brand Recognition</li>
             <li>Green Bar</li>
             <li class="bg1">Warranty</li>
             <li>Subdomains Secured</li>
@@ -312,35 +310,29 @@ $(document).ready(function () {
             <li>Mobile device compatibility</li>
             <li class="bg1">IDN Support</li>
             <li>EV Upgrader</li>
-            <li class="bg1">Installation</li>
+            <li class="bg1">Refund Policy</li>
             <li>Free Customer Support</li>
           </ul>
           <!--ssl_lt--> 
         </div>
         <div class="ssl_plan1">
-          <h5><span>RapidSSL®</span></h5>
+          <h5><span>PositiveSSL</span></h5>
           <ul>
-            <li class="bg1">£30 / year</li>
+            <li class="bg1">RM33 / year</li>
             <li>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
             </li>
             <li class="bg1">Domain</li>
-            <li> Validation</li>
-            <li class="bg1">Standard</li>
-            <li>Moderate</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>£10,000</li>
-            <li class="bg1">Single</li>
-            <li>1-2 hours</li>
-            <li class="bg1">1-4 years</li>
-            <li>Static</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
             <li>
-              <div class="tickmark"></div>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">$10,000</li>
+            <li>Single Domain</li>
+            <li class="bg1">5-15 minutes</li>
+            <li>1 - 5 years</li>
+            <li class="bg1">Static Seal</li>
+            <li>
+              <div class="cross"></div>
             </li>
             <li class="bg1">
               <div class="tickmark"></div>
@@ -349,14 +341,18 @@ $(document).ready(function () {
               <div class="tickmark"></div>
             </li>
             <li class="bg1">
-              <div class="cross"></div>
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="tickmark"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
             </li>
             <li>
               <div class="cross"></div>
             </li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
+            <li class="bg1">15 Days</li>
             <li>
               <div class="tickmark"></div>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
@@ -365,74 +361,26 @@ $(document).ready(function () {
           <!--ssl_plan1--> 
         </div>
         <div class="ssl_plan1">
-          <h5><span>QuickSSL®</span></h5>
+          <h5><span>PositiveSSL Wildcard</span></h5>
           <ul>
-            <li class="bg1">£30 / year</li>
+            <li class="bg1">RM296 / year</li>
             <li>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
             </li>
             <li class="bg1">Domain</li>
-            <li> Validation</li>
-            <li class="bg1">Standard</li>
-            <li>Moderate</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>£10,000</li>
-            <li class="bg1">Single</li>
-            <li>1-2 hours</li>
-            <li class="bg1">1-4 years</li>
-            <li>Static</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
             <li>
-              <div class="tickmark"></div>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">$10,000</li>
+            <li>Multiple Subdomains</li>
+            <li class="bg1">5-15 minutes</li>
+            <li>1 - 5 years</li>
+            <li class="bg1">Static Seal</li>
+            <li>
+              <div class="cross"></div>
             </li>
             <li class="bg1">
               <div class="tickmark"></div>
-            </li>
-            <li>
-              <div class="tickmark"></div>
-            </li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>
-              <div class="cross"></div>
-            </li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>
-              <div class="tickmark"></div>
-              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
-            </li>
-          </ul>
-          <!--ssl_plan1--> 
-        </div>
-        <div class="ssl_plan1">
-          <h5><span>QuickSSL®
-            Premium</span></h5>
-          <ul>
-            <li class="bg1">£30 / year</li>
-            <li>
-              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
-            </li>
-            <li class="bg1">Domain</li>
-            <li> Validation</li>
-            <li class="bg1">Standard</li>
-            <li>Moderate</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>£10,000</li>
-            <li class="bg1">Single</li>
-            <li>1-2 hours</li>
-            <li class="bg1">1-4 years</li>
-            <li>Static</li>
-            <li class="bg1">
-              <div class="cross"></div>
             </li>
             <li>
               <div class="tickmark"></div>
@@ -444,62 +392,12 @@ $(document).ready(function () {
               <div class="tickmark"></div>
             </li>
             <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>
-              <div class="cross"></div>
-            </li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>
-              <div class="tickmark"></div>
-              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
-            </li>
-          </ul>
-          <!--ssl_plan1--> 
-        </div>
-        <div class="ssl_plan1">
-          <h5><span>True 
-            BusinessID</span></h5>
-          <ul>
-            <li class="bg1">£30 / year</li>
-            <li>
-              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
-            </li>
-            <li class="bg1">Domain</li>
-            <li> Validation</li>
-            <li class="bg1">Standard</li>
-            <li>Moderate</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>£10,000</li>
-            <li class="bg1">Single</li>
-            <li>1-2 hours</li>
-            <li class="bg1">1-4 years</li>
-            <li>Static</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>
-              <div class="tickmark"></div>
-            </li>
-            <li class="bg1">
               <div class="tickmark"></div>
             </li>
             <li>
-              <div class="tickmark"></div>
-            </li>
-            <li class="bg1">
               <div class="cross"></div>
             </li>
-            <li>
-              <div class="cross"></div>
-            </li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
+            <li class="bg1">15 Days</li>
             <li>
               <div class="tickmark"></div>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
@@ -508,31 +406,23 @@ $(document).ready(function () {
           <!--ssl_plan1--> 
         </div>
         <div class="ssl_plan1 ssl_plan2">
-          <h5><span class="recommend"></span><span>True 
-            BusinessID
-            with EV</span></h5>
+          <h5><span class="recommend"></span><span>EssentialSSL</span></h5>
           <ul>
-            <li class="bg1">£30 / year</li>
+            <li class="bg1">RM93 / year</li>
             <li>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
             </li>
             <li class="bg1">Domain</li>
-            <li> Validation</li>
-            <li class="bg1">Standard</li>
-            <li>Moderate</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
-            <li>£10,000</li>
-            <li class="bg1">Single</li>
-            <li>1-2 hours</li>
-            <li class="bg1">1-4 years</li>
-            <li>Static</li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
             <li>
-              <div class="tickmark"></div>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">$10,000</li>
+            <li>Single Domain</li>
+            <li class="bg1">5-15 minutes</li>
+            <li>1 - 5 years</li>
+            <li class="bg1">Static Seal</li>
+            <li>
+              <div class="cross"></div>
             </li>
             <li class="bg1">
               <div class="tickmark"></div>
@@ -541,14 +431,18 @@ $(document).ready(function () {
               <div class="tickmark"></div>
             </li>
             <li class="bg1">
-              <div class="cross"></div>
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="tickmark"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
             </li>
             <li>
               <div class="cross"></div>
             </li>
-            <li class="bg1">
-              <div class="cross"></div>
-            </li>
+            <li class="bg1">15 Days</li>
             <li>
               <div class="tickmark"></div>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
@@ -557,28 +451,71 @@ $(document).ready(function () {
           <!--ssl_plan1--> 
         </div>
         <div class="ssl_plan1">
-          <h5><span>True 
-            BusinessID 
-            Wildcard</span></h5>
+          <h5><span>EssentialSSL Wildcard</span></h5>
           <ul>
-            <li class="bg1">£30 / year</li>
+            <li class="bg1">RM309 / year</li>
             <li>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
             </li>
             <li class="bg1">Domain</li>
-            <li> Validation</li>
-            <li class="bg1">Standard</li>
-            <li>Moderate</li>
-            <li class="bg1">
+            <li>
               <div class="cross"></div>
             </li>
-            <li>£10,000</li>
-            <li class="bg1">Single</li>
-            <li>1-2 hours</li>
-            <li class="bg1">1-4 years</li>
-            <li>Static</li>
-            <li class="bg1">
+            <li class="bg1">$10,000</li>
+            <li>Multiple Subdomains</li>
+            <li class="bg1">5-15 minutes</li>
+            <li>1 - 5 years</li>
+            <li class="bg1">Static Seal</li>
+            <li>
               <div class="cross"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="tickmark"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="tickmark"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">15 Days</li>
+            <li>
+              <div class="tickmark"></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
+            </li>
+          </ul>
+          <!--ssl_plan1--> 
+        </div>
+        <div class="ssl_plan1">
+          <h5><span>InstantSSL</span></h5>
+          <ul>
+            <li class="bg1">RM120 / year</li>
+            <li>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
+            </li>
+            <li class="bg1">Full Business</li>
+            <li>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">$50,000</li>
+            <li>Single Domain</li>
+            <li class="bg1">Up to 2 days</li>
+            <li>1 - 5 years</li>
+            <li class="bg1">Static Seal</li>
+            <li>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
             </li>
             <li>
               <div class="tickmark"></div>
@@ -590,14 +527,57 @@ $(document).ready(function () {
               <div class="tickmark"></div>
             </li>
             <li class="bg1">
-              <div class="cross"></div>
+              <div class="tickmark"></div>
             </li>
             <li>
               <div class="cross"></div>
             </li>
-            <li class="bg1">
+            <li class="bg1">15 Days</li>
+            <li>
+              <div class="tickmark"></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
+            </li>
+          </ul>
+          <!--ssl_plan1--> 
+        </div>
+        <div class="ssl_plan1">
+          <h5><span>InstantSSL Pro</span></h5>
+          <ul>
+            <li class="bg1">RM160 / year</li>
+            <li>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
+            </li>
+            <li class="bg1">Full Business</li>
+            <li>
               <div class="cross"></div>
             </li>
+            <li class="bg1">$100,000</li>
+            <li>Single Domain</li>
+            <li class="bg1">Up to 2 days</li>
+            <li>1 - 5 years</li>
+            <li class="bg1">Static Seal</li>
+            <li>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="tickmark"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="tickmark"></div>
+            </li>
+            <li class="bg1">
+              <div class="tickmark"></div>
+            </li>
+            <li>
+              <div class="cross"></div>
+            </li>
+            <li class="bg1">15 Days</li>
             <li>
               <div class="tickmark"></div>
               <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
